# ChangeLog for www-apps/mantisbt
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.16 2005/10/24 14:41:57 rl03 Exp $

*mantisbt-0.19.3 (24 Oct 2005)

  24 Oct 2005; Renat Lumpau <rl03@gentoo.org> +files/0.19.3-debian.patch,
  +mantisbt-0.19.3.ebuild:
  Version bump wrt security bug #110326.

  16 Sep 2005; Renat Lumpau <rl03@gentoo.org> mantisbt-0.19.2.ebuild:
  Fixed ${S}

  15 Sep 2005; Renat Lumpau <rl03@gentoo.org> -mantisbt-0.18.3.ebuild:
  Removing vulnerable version wrt security bug #103308.

  15 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  mantisbt-0.19.2.ebuild:
  Stable on ppc.

*mantisbt-0.19.2 (14 Sep 2005)

  14 Sep 2005; Renat Lumpau <rl03@gentoo.org> +files/0.19.2-debian.patch,
  +mantisbt-0.19.2.ebuild:
  Version bump wrt security bug #103308. Using a Debian patch.

*mantisbt-1.0.0_rc2 (14 Sep 2005)

  14 Sep 2005; Renat Lumpau <rl03@gentoo.org> -mantisbt-1.0.0_rc1.ebuild,
  +mantisbt-1.0.0_rc2.ebuild:
  Version bump

  11 Sep 2005; Renat Lumpau <rl03@gentoo.org> mantisbt-0.18.3.ebuild,
  mantisbt-1.0.0_rc1.ebuild:
  Fixed php deps wrt bug #105419.

  22 Aug 2005; Renat Lumpau <rl03@gentoo.org>
  files/postinstall-en-1.0.0.txt:
  Housekeeping

  22 Aug 2005; Renat Lumpau <rl03@gentoo.org>
  files/postinstall-en-1.0.0.txt, mantisbt-1.0.0_rc1.ebuild:
  Housekeeping

  12 Aug 2005; Luis Medinas <metalgod@gentoo.org> mantisbt-1.0.0_rc1.ebuild:
  Add ~amd64 Keywords. Closes bug #98747.

*mantisbt-1.0.0_rc1 (28 Jul 2005)

  28 Jul 2005; Renat Lumpau <rl03@gentoo.org>
  +files/postinstall-en-1.0.0.txt, -mantisbt-1.0.0_alpha3.ebuild,
  +mantisbt-1.0.0_rc1.ebuild:
  Version bump (bug #100564)

*mantisbt-1.0.0_alpha3 (04 Jul 2005)

  04 Jul 2005; Renat Lumpau <rl03@gentoo.org> files/postinstall-en.txt,
  +mantisbt-1.0.0_alpha3.ebuild:
  Version bump, closes #77253.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  mantisbt-0.18.3.ebuild: