@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/mantisbt-0.19.3.ebuild,v 1.1 2005/10/24 14:41:57 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/mantisbt-0.19.3.ebuild,v 1.2 2005/10/24 19:54:49 hansmi Exp $
 
 inherit webapp eutils
 
@@ -12,7 +12,7 @@ DESCRIPTION="PHP/MySQL/Web based bugtracking system"
 HOMEPAGE="http://www.mantisbt.org/"
 SRC_URI="mirror://sourceforge/${PN}/mantis-${PV}.tar.gz"
 
-KEYWORDS="~ppc ~x86"
+KEYWORDS="ppc ~x86"
 
 RDEPEND="
 	>=dev-db/mysql-3.23.32
