@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/tikiwiki
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/tikiwiki/ChangeLog,v 1.21 2005/10/23 15:40:35 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/tikiwiki/ChangeLog,v 1.22 2005/10/24 19:53:22 hansmi Exp $
+
+  24 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
+  tikiwiki-1.9.1.1.ebuild:
+  Stable on ppc.
 
   23 Oct 2005; Renat Lumpau <rl03@gentoo.org> -tikiwiki-1.9.1.ebuild:
   Removing vulnerable version
