@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/mantisbt
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.16 2005/10/24 14:41:57 rl03 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/mantisbt/ChangeLog,v 1.17 2005/10/24 19:54:49 hansmi Exp $
+
+  24 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
+  mantisbt-0.19.3.ebuild:
+  Stable on ppc.
 
 *mantisbt-0.19.3 (24 Oct 2005)
 
